examples/example_061/example_061.v
From Top Require Import (hints) Foo.A.

Local Instance a : A.T := _.
Fail Check a.
